fix text overflow

--- a/src/whiskers/src/styles.css
+++ b/src/whiskers/src/styles.css
@@ -6,7 +6,7 @@
 .one-line-text {
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow: hidden;
+  overflow: clip;
 }
 
 
